# scan_platform

./: README.md
arduino/: ros_stepper_scan.ino
config/: settings.yaml
ros_stepper_scan/: CMakeLists.txt  package.xml  stepper_scan.launch
ros_stepper_scan/config/: settings.yaml
ros_stepper_scan/src/: kinect2_interface.cpp  stepper_scan.cpp
ros_stepper_scan/srv/: stepper_scan.srv
